--- a/styling.css
+++ b/styling.css
@@ -3612,4 +3612,93 @@ body{
       height: 0%;
     }
   }
+
+  @keyframes pound {
+    to { transform: scale(1.2); box-shadow: 1px 2px 3px 0 rgba(0, 0, 0, 0.65), 2px 6px 12px 0 rgba(0, 0, 0, 0.5), 3px 8px 15px 0 rgba(0, 0, 0, 0.45) }
+  }
+  
+  .loader1 {
+    position: absolute;
+    display: inline-block;
+    top: 70%;
+    left: 40%;
+    margin-left: 10%;
+    transform: translate3d(-50%, -50%, 0);
+  }
+  .dot {
+    width: 24px;
+    height: 24px;
+    background: #3ac;
+    border-radius: 100%;
+    display: inline-block;
+    animation: slide 1s infinite;
+  }
+  .dot:nth-child(1) {
+    animation-delay: 0.1s;
+    background: #32aacc;
+  }
+  .dot:nth-child(2) {
+    animation-delay: 0.2s;
+    background: #64aacc;
+  }
+  .dot:nth-child(3) {
+    animation-delay: 0.3s;
+    background: #96aacc;
+  }
+  .dot:nth-child(4) {
+    animation-delay: 0.4s;
+    background: #c8aacc;
+  }
+  .dot:nth-child(5) {
+    animation-delay: 0.5s;
+    background: #faaacc;
+  }
+  @-moz-keyframes slide {
+    0% {
+      transform: scale(1);
+    }
+    50% {
+      opacity: 0.3;
+      transform: scale(2);
+    }
+    100% {
+      transform: scale(1);
+    }
+  }
+  @-webkit-keyframes slide {
+    0% {
+      transform: scale(1);
+    }
+    50% {
+      opacity: 0.3;
+      transform: scale(2);
+    }
+    100% {
+      transform: scale(1);
+    }
+  }
+  @-o-keyframes slide {
+    0% {
+      transform: scale(1);
+    }
+    50% {
+      opacity: 0.3;
+      transform: scale(2);
+    }
+    100% {
+      transform: scale(1);
+    }
+  }
+  @keyframes slide {
+    0% {
+      transform: scale(1);
+    }
+    50% {
+      opacity: 0.3;
+      transform: scale(2);
+    }
+    100% {
+      transform: scale(1);
+    }
+  }
   
